# claude-debate

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: architecture.py  pr_review.py  trading.py
src/claude_debate/: __init__.py  debate.py  prompts.py
tests/: test_debate.py
