[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-debate"
version = "0.1.0"
description = "Adversarial Advocate/Critic/Judge debate over any decision. Pressure-test high-stakes calls with a cheap, structured second opinion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alex-jb" }]
keywords = ["claude", "anthropic", "llm", "adversarial", "debate", "decision-making", "claude-code", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Homepage = "https://github.com/alex-jb/claude-debate"
Issues = "https://github.com/alex-jb/claude-debate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
